# sql-minus

./: CMakeLists.txt  CMakeLists.txt.user.6ccafe2  README.md  database_manager.cpp  database_manager.h  database_operations.cpp  database_operations.h  file_utils.cpp  file_utils.h  main.cpp  manager.h  operation.h  server.cpp  server.h  sqlparser.cpp  sqlparser.h  structures.h  table_manager.cpp  table_manager.h  table_operations.cpp  table_operations.h  tuple_manager.cpp  tuple_manager.h  tuple_operations.cpp  tuple_operations.h  widget.cpp  widget.h  widget.ui
